timApp/static/stylesheet.scss
/* ... */
.input-group-xs > .form-control,
.input-group-xs > .input-group-addon,
.input-group-xs > .input-group-btn > .btn {
    height: 22px;
    padding: 1px 5px;
    font-size: 12px;
    line-height: 1.5;
}

@mixin h1-base() {
    text-align: center;
    margin-top: 3cm;
    margin-bottom: 1cm;
    color: navy;
    border-top: navy 2pt solid;
    border-bottom: navy 2pt solid;
    padding-top: 10pt;
    padding-bottom: 10pt;
    line-height: 1.3;
}

// all document-related styles under .paragraphs selector!
.paragraphs, .slides {
//.paragraphs {
    @include center-block();
    @media (min-width: $screen-md-min) {
        min-width: $paragraph-preferred-width;
    }
    max-width: $paragraph-preferred-width;
    .smalltext > .parContent {
        font-size: small;
    }
    .linkit > .parContent {
        font-size: small;
    }
    .authorinfo {
        top: -1.1em;
        position: relative;
        font-size: x-small;
        height: 0.5em;

        .timestamp {
            color: lightgrey;
        }
    }
    .parContent {
        text-align: $body-text-align;
        @media (max-width: $screen-xs-max) {
            text-align: $body-text-align-xs;
        }
        font-size: 16px;

        * code {
            font-size: $inline-code-size;
        }

        & > h1 {
            @include h1-base();
        }

        @mixin heading-base($outdent) {
            text-align: left;
            margin-left: $outdent;
            @media (max-width: $screen-sm + 6) {
                margin-left: $outdent * 0.5;
            }
            @media (max-width: $screen-xs-max) {
                margin-left: 0;
            }
        }

        & > h2 {
            @include heading-base($heading-outdent);
            margin-top: 1.5cm;
            line-height: 1.2;
        }

        & > h3 {
            @include heading-base($heading-outdent*0.8);
            margin-top: 1cm;
            margin-bottom: 0.5cm;
        }

        & > h4 {
            @include heading-base($heading-outdent*0.6);
            margin-top: 2em;
            margin-bottom: 0.5cm;
        }
        .mcq, .mmcq {
            .header {
                text-align: center;
            }

            .stem {
                text-align: left;
            }

            td {
                text-align: left;
                vertical-align: middle;

                &.text-center {
                    @extend .text-center;
                }
            }

            button {
                @extend .timButton;
            }
        }
    }


    .mdcontent {
        color: #DCDCDC;
        display: none;
    }

    table {
        @extend .table, .table-condensed, .table-bordered;
        width: auto;
        margin-left: auto;
        margin-right: auto;
        th {
            background-color: #dedede;
            border: 1px solid #ccc;
        }
    }

     .header th {
            border: 1px solid #bbb;
     }

     /* ready styles begin */
    .tim         { color: $basic-color}
    .red         { color: red; }
    .blue        { color: blue; }
    .green       { color: green; }
    .yellow      { color: yellow; }
    .white       { color: white; }
    .gray        { color: gray; }
    .lightgray   { color: lightgrey; }
    .bggray      { background: #e6e6e6; }
    .bgred       { background: red; }
    .bgblue      { background: blue; }
    .bggreen     { background: green; }
    .bgyellow    { background: yellow; }
    .bglightgray { background: lightgrey; }
    .bgtim       { background: $basic-color}
    .bgwhite     { background: white; }
    .border      { border: 1.00pt solid #000000; }
    .radius      { border-radius: 0.3em; }
    .obs         { border: 1.00pt solid #000000; padding: 0.1em; background: #e6e6e6;}
    img.smallimage {
        display: inline;
    }
    span.button {
        border: black;
        border-style: solid;
        background: lightgray;
        border-color: black;
        border-width: 1pt;
        border-radius: 4pt;
        padding-left: 3pt;
        padding-right: 3pt;
    }


     /* ready styles end */

    .removePre pre { /* for chat */
        visibility: collapse;
        height: 0pt;
    }

    .smalltitle { /* for chat */
        font-size: x-small;
        color: gray;
    }


    .huomautus {
        @extend .center-block;
        width: 90%;
        margin-top: 1.5em;
        margin-bottom: 1.5em;
        background: #e6e6e6;
        border: 1.00pt solid #000000;
        padding: 0.25cm;
        font-family: Verdana, Arial, sans-serif;
        text-align: left;

        p {
            margin-top: 0.1em;
            margin-left: 0.3em;
            margin-bottom: 0.1em;
        }
    }

    .answerBrowser {
        text-align: left;
    }

    p.plgfooter {
        text-align: center;
    }

    img {
        max-width: 100%;
        display: block;
        margin: 0 auto;
    }

    blockquote {
        @extend .center-block;
        width: 90%;
        font-size: inherit;
        border: none;
    }

    pre {
        background: $pre-background;
        border: none;
        border-left: $pre-left-border;
        border-radius: 0;
        overflow: $pre-overflow;

        code {
            white-space: pre;
            font-size: $block-code-size;
        }
    }

    @import "csRun";
}

.correct {
    background-color: limegreen;
    padding: 0.5em;
}

.wrong {
    background-color: red;
    padding: 0.5em;
}

.docEditor {
    width: 100%;
    height: 30em;
}

.height-35 {
    height: 35em;
}

.smallNote {
    font-size: x-small;
}

.redbutton {
    background-color: #990000
}

p.caption { 
    text-align: center;
}

.material {
    background-color: $material-bg;
    box-shadow: $material-shadow;
    border: $material-border;
    border-radius: $material-border-radius;
}

.editorArea {
    background-color: #B0B0B0;
}

.pluginError, .error {
    border: 1px solid red;
    background-color: pink;
}
/* ... */

